clusters/beelink-talos/document-portal/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: document-portal
  namespace: document-portal
spec:
  type: ClusterIP

  selector:
    app.kubernetes.io/name: document-portal

  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
