clusters/beelink-talos/document-portal/document-portal-tailscale-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: document-portal-tailscale
  namespace: document-portal
spec:
  ingressClassName: tailscale

  defaultBackend:
    service:
      name: document-portal
      port:
        number: 80

  tls:
    - hosts:
        - document-portal
